// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Home/CommonTable should match snapshot 1`] = `
<div>
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table ant-table-bordered ant-table-scroll-horizontal"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="min-width: 100%; table-layout: auto;"
              >
                <colgroup>
                  <col
                    style="width: auto;"
                  />
                  <col
                    style="width: auto;"
                  />
                  <col
                    style="width: auto;"
                  />
                  <col
                    style="width: auto;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      projectManage.projectForm.projectName
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.desc
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.createTime
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="ant-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      <a
                        href="/project/default/order/1"
                      >
                        test1
                      </a>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <a
                        href="/project/default/overview"
                      >
                        default
                      </a>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      desc1
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Home/CommonTable should render custom custom when custom has a value 1`] = `
<div>
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table ant-table-bordered ant-table-scroll-horizontal"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="min-width: 100%; table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      subject
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      desc
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      workflow_id
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="ant-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      test1
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      desc1
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      test1
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Home/CommonTable should render error info when error has a value 1`] = `
<div>
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table ant-table-bordered ant-table-empty ant-table-scroll-horizontal"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="min-width: 100%; table-layout: auto;"
              >
                <colgroup>
                  <col
                    style="width: auto;"
                  />
                  <col
                    style="width: auto;"
                  />
                  <col
                    style="width: auto;"
                  />
                  <col
                    style="width: auto;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      projectManage.projectForm.projectName
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.desc
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.createTime
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="ant-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-placeholder"
                  >
                    <td
                      class="ant-table-cell"
                      colspan="4"
                    >
                      <div
                        class="ant-table-expanded-row-fixed"
                        style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                      >
                        <div
                          class="ant-result ant-result-error"
                        >
                          <div
                            class="ant-result-icon"
                          >
                            <span
                              aria-label="close-circle"
                              class="anticon anticon-close-circle"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="close-circle"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="ant-result-title"
                          >
                            common.request.noticeFailTitle
                          </div>
                          <div
                            class="ant-result-subtitle"
                          >
                            error message
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Home/CommonTable should render spin when loading equal true 1`] = `
<div>
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div>
        <div
          class="ant-spin ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          class="ant-table ant-table-bordered ant-table-scroll-horizontal"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
              style="overflow-x: auto; overflow-y: hidden;"
            >
              <table
                style="min-width: 100%; table-layout: auto;"
              >
                <colgroup>
                  <col
                    style="width: auto;"
                  />
                  <col
                    style="width: auto;"
                  />
                  <col
                    style="width: auto;"
                  />
                  <col
                    style="width: auto;"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      projectManage.projectForm.projectName
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.desc
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      order.order.createTime
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    aria-hidden="true"
                    class="ant-table-measure-row"
                    style="height: 0px; font-size: 0px;"
                  >
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                    <td
                      style="padding: 0px; border: 0px; height: 0px;"
                    >
                      <div
                        style="height: 0px; overflow: hidden;"
                      >
                         
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      <a
                        href="/project/default/order/1"
                      >
                        test1
                      </a>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <a
                        href="/project/default/overview"
                      >
                        default
                      </a>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      desc1
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test Home/genTabPaneTitle should be rendered badge count when badgeCount is not zero or has been defined 1`] = `
<Badge
  className="tabs-panel-badge"
  count={88}
  overflowCount={99}
  size="small"
>
  <span
    className="tabs-panel-title"
  >
    title
  </span>
</Badge>
`;

exports[`test Home/genTabPaneTitle should match snapshot 1`] = `"title"`;

exports[`test Home/genTabPaneTitle should match snapshot 2`] = `
<Badge
  className="tabs-panel-badge"
  count={12}
  overflowCount={99}
  size="small"
>
  <span
    className="tabs-panel-title"
  >
    title
  </span>
</Badge>
`;

exports[`test Home/genTabPaneTitle should match snapshot 3`] = `
<Badge
  className="tabs-panel-badge"
  count={101}
  overflowCount={99}
  size="small"
>
  <span
    className="tabs-panel-title"
  >
    title
  </span>
</Badge>
`;
